src/bindings/c/CPLC.f90


        type(C_PTR), intent(out) :: string_param
        type(C_PTR), intent(in), value :: param_name
        type(C_PTR), intent(in), value :: section
        character(len=:), allocatable, save:: string_param_f
        character(:), allocatable :: section_f
        character(:), allocatable :: param_name_f


        call c_f_string(param_name, param_name_f)
        call c_f_string(section, section_f)

        call get_string_param(section_f, param_name_f, string_param_f)
        call f_c_string(string_param_f, string_param)

    end subroutine CPLC_get_string_param


    subroutine CPLC_get_string_array_param(section, param_name, string_array_param, array_len) &
        bind (C, name="CPLC_get_string_array_param")
        use CPL, only: get_string_array_param, CPL_STRING_MAX_LEN
        implicit none
        
        integer(C_INT), intent(out) :: array_len
        type(C_PTR), dimension(:), allocatable, intent(out) :: string_array_param

        type(C_PTR), intent(in), value :: param_name
        type(C_PTR), intent(in), value :: section

        character(:), allocatable :: param_name_f
        character(:), allocatable :: section_f
        character(len=CPL_STRING_MAX_LEN), dimension(:), allocatable, save:: string_array_param_f
        character, dimension(:,:), allocatable, target, save:: f


        call c_f_string(param_name, param_name_f)
        call c_f_string(section, section_f)

        call get_string_array_param(section_f, param_name_f, string_array_param_f)
        !allocate(f(1, 5))
        !f(1,1) = 'H'
        !f(1,2) = 'O'
        !f(1,3) = 'L'
        !f(1,4) = 'A'
        !f(1,5) = C_NULL_CHAR

        print*, "ENTRA"

        call f_c_string_array(string_array_param_f, string_array_param)

        array_len = size(string_array_param_f)
        print*, "SALE"
    end subroutine CPLC_get_string_array_param
#endif


    subroutine CPLC_init(calling_realm, returned_realm_comm) &
        bind (C, name="CPLC_init_Fort")
        use CPL, only: CPL_init
        implicit none
        
        integer(C_INT), value :: calling_realm
        integer(C_INT)        :: returned_realm_comm
        
        integer :: ierror

        call CPL_init(calling_realm, returned_realm_comm, ierror)

    end subroutine CPLC_init

    subroutine CPLC_finalize() &
        bind (C, name="CPLC_finalize")
        use CPL, only: CPL_finalize
        implicit none
               
        integer :: ierror

        call CPL_finalize(ierror)

    end subroutine CPLC_finalize

    subroutine CPLC_setup_cfd(icomm_grid, xyzL, xyz_orig, ncxyz) &
        bind (C, name="CPLC_setup_cfd_Fort")
        use CPL, only: CPL_setup_cfd
        implicit none

        ! Integers
        integer(C_INT), value :: icomm_grid
        type(C_PTR), value :: ncxyz ! (3)

        ! Reals
        type(C_PTR), value :: xyzL, xyz_orig ! (3)

        ! Fortran equivalent array pointers
        integer, dimension(:), pointer :: ncxyz_f
        real(kind(0.d0)), dimension(:), pointer :: xyzL_f, xyz_orig_f

        !n Integers
        call C_F_POINTER(ncxyz, ncxyz_f, [3])

        ! Reals
        call C_F_POINTER(xyzL, xyzL_f, [3])
        call C_F_POINTER(xyz_orig, xyz_orig_f, [3])

        call CPL_setup_cfd(icomm_grid, xyzL_f, xyz_orig_f, ncxyz_f)


    end subroutine CPLC_setup_cfd


    subroutine CPLC_cfd_init(icomm_grid, icoord, npxyz_cfd, xyzL, xyz_orig, &
                             ncxyz, ijkcmax, ijkcmin, iTmin, iTmax,  &
                             jTmin, jTmax, kTmin, kTmax, xgrid, ygrid, zgrid) &
        bind (C, name="CPLC_cfd_init")
        use CPL, only: coupler_cfd_init
        implicit none

        ! Integers
        integer(C_INT), value :: icomm_grid
        type(C_PTR), value :: ijkcmin ! (3)
        type(C_PTR), value :: ijkcmax ! (3)
        type(C_PTR), value :: npxyz_cfd ! (3)
        type(C_PTR), value :: ncxyz ! (3)
        type(C_PTR), value :: iTmin, iTmax ! (npx)
        type(C_PTR), value :: jTmin, jTmax ! (npy)
        type(C_PTR), value :: kTmin, kTmax ! (npz)
        type(C_PTR), value :: icoord ! (3, nprocs)

        ! Reals
        type(C_PTR), value :: xyzL ! (3)
        type(C_PTR), value :: xyz_orig ! (3)
        type(C_PTR), value :: xgrid, ygrid ! (ncx, ncy)
        type(C_PTR), value :: zgrid ! (ncz)

        ! Fortran equivalent array pointers
        integer, dimension(:), pointer :: ijkcmin_f, ijkcmax_f
        integer, dimension(:), pointer :: npxyz_cfd_f, ncxyz_f
        integer, dimension(:), pointer :: iTmin_f, iTmax_f
        integer, dimension(:), pointer :: jTmin_f, jTmax_f
        integer, dimension(:), pointer :: kTmin_f, kTmax_f
        integer, dimension(:,:), pointer :: icoord_f
        real(kind(0.d0)), dimension(:), pointer :: xyzL_f
        real(kind(0.d0)), dimension(:), pointer :: xyz_orig_f
        real(kind(0.d0)), dimension(:,:,:), pointer :: xgrid_f, ygrid_f, zgrid_f

        ! Convenient local variables to be stored
        integer :: npx, npy, npz, nprocs, ncx, ncy, ncz

        ! Convert arrays with convenience local variables first
        call C_F_POINTER(npxyz_cfd, npxyz_cfd_f, [3])
        call C_F_POINTER(ncxyz, ncxyz_f, [3])

        ! Store convenience variables
        npx = npxyz_cfd_f(1)
        npy = npxyz_cfd_f(2)
        npz = npxyz_cfd_f(3)
        nprocs = npx*npy*npz
        ncx = ncxyz_f(1)
        ncy = ncxyz_f(2)
        ncz = ncxyz_f(3)

        ! Convert remaining array pointers
        ! Integers
        call C_F_POINTER(ijkcmin, ijkcmin_f, [3])
        call C_F_POINTER(ijkcmax, ijkcmax_f, [3])
        call C_F_POINTER(npxyz_cfd, npxyz_cfd_f, [3])
        call C_F_POINTER(ncxyz, ncxyz_f, [3])
        call C_F_POINTER(iTmin, iTmin_f, [npx])
        call C_F_POINTER(iTmax, iTmax_f, [npx])
        call C_F_POINTER(jTmin, jTmin_f, [npy])
        call C_F_POINTER(jTmax, jTmax_f, [npy])
        call C_F_POINTER(kTmin, kTmin_f, [npz])
        call C_F_POINTER(kTmax, kTmax_f, [npz])
        call C_F_POINTER(icoord, icoord_f, [3, nprocs])

        ! Reals
        call C_F_POINTER(xyzL, xyzL_f, [3])
        call C_F_POINTER(xyz_orig, xyz_orig_f, [3])
        call C_F_POINTER(xgrid, xgrid_f, [ncx+1, ncy+1, ncz+1])
        call C_F_POINTER(ygrid, ygrid_f, [ncx+1, ncy+1, ncz+1])
        call C_F_POINTER(zgrid, zgrid_f, [ncx+1, ncy+1, ncz+1])

        ! Call the old routine
        call coupler_cfd_init(icomm_grid, icoord_f, npxyz_cfd_f,  &
                              xyzL_f, xyz_orig_f, ncxyz_f, ijkcmax_f, ijkcmin_f, &
                              iTmin_f, iTmax_f, jTmin_f, jTmax_f, kTmin_f,    &
                              kTmax_f, xgrid_f, ygrid_f, zgrid_f)

    end subroutine CPLC_cfd_init

    subroutine CPLC_test_python(int_p, doub_p, bool_p, int_pptr, doub_pptr, int_pptr_dims, doub_pptr_dims) &
       bind (C, name="CPLC_test_python")
       !use CPL, only: CPL_test_python
       implicit none

       integer(C_INT), value :: int_p
       real(C_DOUBLE), value :: doub_p
       logical(C_BOOL), value :: bool_p
       type(C_PTR), value :: int_pptr
       type(C_PTR), value :: doub_pptr
       type(C_PTR), value :: int_pptr_dims
       type(C_PTR), value :: doub_pptr_dims

       !Fortran equivalent array pointers
       integer, dimension(:,:), pointer :: int_pptr_f
       real(kind(0.d0)), dimension(:,:), pointer :: doub_pptr_f
       integer, dimension(:), pointer :: int_pptr_dims_f, doub_pptr_dims_f

       !Aux variables
       integer :: int_dimx, int_dimy
       integer :: doub_dimx, doub_dimy

       call C_F_POINTER(int_pptr_dims, int_pptr_dims_f, [2])
       call C_F_POINTER(doub_pptr_dims, doub_pptr_dims_f, [2])


       int_dimx = int_pptr_dims_f(1)
       int_dimy = int_pptr_dims_f(2)
       print * , 'int_dimx: ', int_dimx
       print * , 'int_dimy: ', int_dimy

       doub_dimx = doub_pptr_dims_f(1)
       doub_dimy = doub_pptr_dims_f(2)
       print * , 'doub_dimx: ', doub_dimx
       print * , 'doub_dimy: ', doub_dimy

       

       call C_F_POINTER(int_pptr, int_pptr_f, [int_dimx, int_dimy])
       call C_F_POINTER(doub_pptr, doub_pptr_f, [doub_dimx, doub_dimy])

       print *, 'int_p: ', int_p
       print *, 'doub_p: ', doub_p
       if (bool_p) then
         print *, 'bool_p: True'
       else
         print *, 'bool_p: False'
       end if
       print *, 'int_pptr: ', int_pptr_f
       !do i=1,int_dimx
       ! do j=1,int_dimy
       !   print *, int_pptr_f(i,j)
       ! end do
       !end do
       print *, 'doub_pptr: ', doub_pptr_f(5, 2)

       !integer(C_INT) :: returned_realm_comm
       !call CPL_test_python()
    end subroutine CPLC_test_python


    subroutine CPLC_setup_md(icomm_grid, xyzL, xyz_orig) &
        bind(C, name="CPLC_setup_md_Fort")
        use CPL, only: CPL_setup_md
        implicit none

        ! Integers
        integer(C_INT), value :: icomm_grid
       
        ! Reals
        type(C_PTR), value :: xyzL, xyz_orig! (3)

        ! Fortran equivalent arrays
        real(kind(0.d0)), dimension(:), pointer :: xyzL_f, xyz_orig_f

        ! C -> Fortran array pointer type conversions
        call C_F_POINTER(xyzL, xyzL_f, [3])
        call C_F_POINTER(xyz_orig, xyz_orig_f, [3])

        ! Call routine
        call CPL_setup_md(icomm_grid, xyzL_f, xyz_orig_f)
    
        
    end subroutine CPLC_setup_md


    subroutine CPLC_md_init(icomm_grid, icoord, & 
                            npxyz_md, globaldomain, xyz_orig) &
        bind(C, name="CPLC_md_init")
        use CPL, only: coupler_md_init
        implicit none
       
        ! Integers
        integer(C_INT), value :: icomm_grid
        type(C_PTR), value :: icoord ! (3, nprocs)
        type(C_PTR), value :: npxyz_md ! (3)
       
        ! Reals
        type(C_PTR), value :: globaldomain ! (3)
        type(C_PTR), value :: xyz_orig! (3)

        ! Fortran equivalent arrays
        integer, dimension(:), pointer :: npxyz_md_f
        integer, dimension(:,:), pointer :: icoord_f
        real(kind(0.d0)), dimension(:), pointer :: globaldomain_f
        real(kind(0.d0)), dimension(:), pointer :: xyz_orig_f 

        ! Other function internals
        integer :: nprocs

        ! C -> Fortran array pointer type conversions
        call C_F_POINTER(npxyz_md, npxyz_md_f, [3])
        call C_F_POINTER(globaldomain, globaldomain_f, [3])
        call C_F_POINTER(xyz_orig, xyz_orig_f, [3])

        ! Store convenience variables
        nprocs = npxyz_md_f(1)*npxyz_md_f(2)*npxyz_md_f(3)
   
        ! Remaining conversions
        call C_F_POINTER(icoord, icoord_f, [3, nprocs])

        ! Call routine
        call coupler_md_init(icomm_grid, icoord_f, npxyz_md_f, & 
                             globaldomain_f, xyz_orig_f)
    
    end subroutine CPLC_md_init


    subroutine CPLC_set_timing(initialstep, Nsteps, dt) &
        bind(C, name="CPLC_set_timing")
        use CPL, only: CPL_set_timing
        implicit none

        ! Integer
        integer(C_INT), value :: Nsteps, initialstep

        ! Real
        real(C_DOUBLE), value :: dt 

        call CPL_set_timing(initialstep, Nsteps, dt)

    end subroutine CPLC_set_timing


    subroutine CPLC_send(asend, asend_shape, limits, send_flag) &
        bind(C, name="CPLC_send")
        use CPL, only: CPL_send!, CPL_send_4d, CPL_send_3d
        implicit none

        ! Boolean
        logical(C_BOOL),intent(out) :: send_flag

        ! Inputs
        type(C_PTR), value :: asend
        type(C_PTR), value :: asend_shape
        type(C_PTR), value :: limits

        ! Fortran equivalent array pointers
        logical :: send_flag_f
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: asend_f
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: asend_shape_f

        ! Other useful variables internal to this subroutine
        integer :: s1, s2, s3, s4

        call C_F_POINTER(limits, limits_f, [6])
        limits_f = limits_f + 1
